NEW298774
Fix false positive warnings with dispatch_get_*_queue() calls
https://bugs.webkit.org/show_bug.cgi?id=298774
Summary Fix false positive warnings with dispatch_get_*_queue() calls
Frédéric Wang (:fredw)
Reported 2025-09-12 07:36:45 PDT
Attachments
Frédéric Wang (:fredw)
Comment 1 2025-09-12 07:44:52 PDT
Frédéric Wang (:fredw)
Comment 2 2025-09-16 00:42:08 PDT
EWS
Comment 3 2025-09-16 08:35:42 PDT
Committed 300031@main (0474968d5eb3): <https://commits.webkit.org/300031@main> Reviewed commits have been landed. Closing PR #50658 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-09-19 07:37:12 PDT
Radar WebKit Bug Importer
Comment 5 2025-09-19 07:37:13 PDT
Note You need to log in before you can comment on or make changes to this bug.