Source/WTF/wtf/darwin/DispatchExtras.h
@@ -29,6 +29,11 @@
 
 namespace WTF {
 
+inline dispatch_queue_t globalDispatchQueueSingleton(intptr_t identifier, uintptr_t flags)
+{
+    return dispatch_get_global_queue(identifier, flags); // NOLINT
+}
+
 inline dispatch_queue_main_t mainDispatchQueueSingleton()
 {
     return dispatch_get_main_queue(); // NOLINT
@@ -36,4 +41,5 @@ inline dispatch_queue_main_t mainDispatchQueueSingleton()
 
 } // namespace WTF
 
+using WTF::globalDispatchQueueSingleton;
 using WTF::mainDispatchQueueSingleton;
